--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:showIn="@layout/activity_main">
 
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,19 +17,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUM1"
-        android:id="@+id/button"
-        android:layout_below="@+id/editText3"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="50dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="SUM2"
         android:id="@+id/button2"
         android:layout_alignTop="@+id/button"
-        android:layout_alignStart="@+id/button4" />
+        android:layout_alignStart="@+id/button5" />
 
     <Button
         android:layout_width="wrap_content"
@@ -38,15 +30,6 @@
         android:layout_alignTop="@+id/button2"
         android:layout_alignParentEnd="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="INTENT"
-        android:id="@+id/button4"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,8 +37,8 @@
         android:ems="10"
         android:id="@+id/editText"
         android:layout_marginTop="48dp"
-        android:layout_below="@+id/button4"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_toEndOf="@+id/textView"
+        android:layout_below="@+id/textView" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -74,4 +57,21 @@
         android:id="@+id/editText3"
         android:layout_below="@+id/editText2"
         android:layout_alignEnd="@+id/editText2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="INTENT"
+        android:id="@+id/button5"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SUM1"
+        android:id="@+id/button"
+        android:layout_below="@+id/editText3"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="116dp" />
 </RelativeLayout>
