Hints y text agragados a los botones

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,7 +17,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUM2"
+        android:text="@string/boton2"
         android:id="@+id/button2"
         android:layout_alignTop="@+id/button"
         android:layout_alignStart="@+id/button5" />
@@ -25,7 +25,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUM3"
+        android:text="@string/boton3"
         android:id="@+id/button3"
         android:layout_alignTop="@+id/button2"
         android:layout_alignParentEnd="true" />
@@ -38,7 +38,8 @@
         android:id="@+id/editText"
         android:layout_marginTop="48dp"
         android:layout_toEndOf="@+id/textView"
-        android:layout_below="@+id/textView" />
+        android:layout_below="@+id/textView"
+        android:hint="@string/Parametro1" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -47,7 +48,8 @@
         android:ems="10"
         android:id="@+id/editText2"
         android:layout_below="@+id/editText"
-        android:layout_toEndOf="@+id/textView" />
+        android:layout_toEndOf="@+id/textView"
+        android:hint="@string/Parametro2" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -56,12 +58,13 @@
         android:ems="10"
         android:id="@+id/editText3"
         android:layout_below="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2" />
+        android:layout_alignEnd="@+id/editText2"
+        android:hint="@string/Parametro3" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="INTENT"
+        android:text="@string/boton5"
         android:id="@+id/button5"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true" />
@@ -69,7 +72,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SUM1"
+        android:text="@string/boton1"
         android:id="@+id/button"
         android:layout_below="@+id/editText3"
         android:layout_alignParentStart="true"
